--- a/package.json
+++ b/package.json
@@ -13,13 +13,19 @@
     "@fortawesome/free-brands-svg-icons": "^5.15.3",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/react-fontawesome": "^0.1.14",
+    "@reduxjs/toolkit": "^1.6.0",
     "@types/node": "^15.12.4",
     "@types/react": "^17.0.11",
+    "axios": "^0.21.1",
     "bootstrap": "^5.0.2",
+    "js-cookie": "^2.2.1",
     "next": "11.0.1",
     "react": "17.0.2",
     "react-bootstrap": "^1.6.1",
     "react-dom": "17.0.2",
+    "react-redux": "^7.2.4",
+    "redux": "^4.1.0",
+    "redux-persist": "^6.0.0",
     "typescript": "^4.3.4"
   },
   "devDependencies": {
